--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>CSS Cafe</title>
     <meta name="description" content="CSS Cafeの公式Webサイトです。商品情報、店舗紹介、アクセス、会社情報など">
     <meta name="keywords" content="CSS Cafe,　カフェ、コーヒー">
-    <link rel="stylesheet" href="css/html5reset-1.6.1.css">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="html5reset-1.6.1.css">
+    <link rel="stylesheet" href="base.css">
   </head>
   <body id="home">
     <!-- header begin -->
@@ -26,7 +26,7 @@
   <!-- main begin -->
   <main class="clearfix">
     <div id="main_image">
-      <img src="images/cafe.jpg" alt="CSS Cafe">
+      <img src="cafe.jpg" alt="CSS Cafe">
     </div>
     <!-- main_content begin -->
     <div id="main_content">
